--- a/KataBabySitterApp/Views/Home/Index.cshtml
+++ b/KataBabySitterApp/Views/Home/Index.cshtml
@@ -46,10 +46,10 @@
                         </select>
                     </div>
 
-                    <div class="col-md-offset-2 col-md-10">
+                    <div class="col-md-10">
                         <br />
                         <button id="test" class="btn-lg btn-success"> Click me</button>
-                        <h3 id="result" class="btn-group-lg"></h3>
+                        <h3 id="result"></h3>
                     </div>
                 </div>
         </div>
